--- a/resources/Index.html
+++ b/resources/Index.html
@@ -19,10 +19,9 @@
             <h3>Esta aplicacion se encargara de elegir a los usuarios que les tocará aparcar en el parking de manera aleatoria de manera que no podra tocarle a una misma persona dos semanas seguidas el turno de parking.</h3>
             </center>
           </div>
+          <button>
+            <img src="enviar.PNG" alt="imagen" width="32" height="32" style="vertical-align: middle">Aparcar</button>
         </center>
-        <div style="width: 1405.33px; margin-left: 31px; height: 550.778px;"> 
-        
-        </div>
       </div>
     </section>
     <br>
