--- a/src/main/resources/static/Index.html
+++ b/src/main/resources/static/Index.html
@@ -32,8 +32,8 @@
         </div>
       </center>
     </div>
-    <p><a href="Users"><button style="width: 247px; margin-left: 225px; height: 30px;">Amanda</button></a></p>
-    <p><a href="Sorteos"><button style="width: 245px; margin-left: 224px; height: 30px;">Gonzalito</button></a></p>
+    <p><a href="../../resources/templates/listausuarios"><button style="width: 247px; margin-left: 225px; height: 30px;">Amanda</button></a></p>
+    <p><a href="../../resources/templates/ListaSorteos.html"><button style="width: 245px; margin-left: 224px; height: 30px;">Gonzalito</button></a></p>
     <br>
     <footer>
       <center>
