--- a/src/main/resources/static/Index.html
+++ b/src/main/resources/static/Index.html
@@ -34,6 +34,7 @@
     </div>
     <p><a href="/Users"><button style="width: 247px; margin-left: 225px; height: 30px;">Amanda</button></a></p>
     <p><a href="/Sorteos"><button style="width: 245px; margin-left: 224px; height: 30px;">Gonzalito</button></a></p>
+    <p><a href="/CreateUser"><button style="width: 245px; height: 30px;">Crear formulario</button></a></p>
     <br>
     <footer>
       <center>
