--- a/src/main/resources/static/Index.html
+++ b/src/main/resources/static/Index.html
@@ -24,7 +24,7 @@
           <center>
             <h3>
               <p style="color: rgb(255, 255, 255)">Esta aplicacion se
-                encargara de elegir a los usuarios que les tocará aparcar en
+                encargara de elegir a los usuarios que les tocara aparcar en
                 el parking aleatoriamente, de manera que no podra tocarle
                 a una misma persona dos semanas seguidas el turno de parking.</p>
             </h3>
@@ -33,9 +33,9 @@
       </center>
     </div>
     <p><a href="/Users"><button style="width: 247px; margin-left: 225px; height: 30px;">Usuarios</button></a></p>
-    <p><a href="/Sorteos"><button style="width: 245px; margin-left: 224px; height: 30px;">sorteos</button></a></p>
-    <p><a href="/CreateUser"><button style="width: 245px; height: 30px;">Crear formulario</button></a></p>
-    <p><a href="/CreateSorteos"><button style="width: 245px; height: 30px;">prueba</button></a></p>
+    <p><a href="/Sorteos"><button style="width: 245px; margin-left: 224px; height: 30px;">Sorteos</button></a></p>
+    <p><a href="/CreateUser"><button style="width: 245px; margin-left: 225px; height: 30px;">Crear formulario</button></a></p>
+    <p><a href="/CreateSorteos"><button style="width: 245px; margin-left: 225px; height: 30px;">Prueba</button></a></p>
     <br>
     <footer>
       <center>
